dark mode fix

--- a/style/main.scss
+++ b/style/main.scss
@@ -86,6 +86,13 @@ body {
   right: 20px;
   font-size: 3rem;
   z-index: 999;
+  text-shadow: 0 0 10px #0009;
+}
+
+@media (max-width: 680px) {
+  #theme-switch {
+    font-size: 2.5rem;
+  }
 }
 
 .text {
